--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -7,6 +7,9 @@
     </a>
 
     <p *ngIf="product.description">Description: {{ product.description }}</p>
+
+    <button type="button" (click)="share()">Share</button>
+
   </h3>
 </div>
 <!-- 
